--- a/admin/src/web/templates/error.html
+++ b/admin/src/web/templates/error.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale:1.0">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <title>Error</title>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='error.css') }}">
