--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -30,37 +30,21 @@ a:hover {
     padding: 20px;
 }
 
-header, footer {
+header,
+footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 1em 0;
 }
 
-header a, footer a {
+header a,
+footer a {
     color: #fff;
     text-decoration: none;
 }
 
-header a:hover, footer a:hover {
-    text-decoration: underline;
-}
-
-/* Navbar styles */
-nav {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-    background-color: #444;
-}
-
-nav a {
-    margin: 0 15px;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-nav a:hover {
+header a:hover,
+footer a:hover {
     text-decoration: underline;
 }
 
@@ -72,7 +56,9 @@ main {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: #333;
 }
 
