--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -105,7 +105,7 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Cerrar sesión</a></li>
                         {% else %}
                         <li><a class="dropdown-item" href="{{ url_for('auth.login') }}">Iniciar sesión</a></li>
                         {% endif %}
