--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -24,10 +24,11 @@ a:hover {
 }
 
 /* Layout styles */
-#container {
-    max-width: 1200px;
+main {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 25px;
 }
 
 header,
@@ -49,12 +50,6 @@ footer a:hover {
 }
 
 /* Content styles */
-main {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
 
 h1,
 h2,
@@ -72,4 +67,11 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+/* Responsive styles */
+@media (max-width: 992px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
