--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -8,14 +8,17 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        aside:empty {
+            display: none;
+        }
+    </style>
 </head>
 
 <body style="padding-top: 75px;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm position-fixed w-100 top-0">
         <div class="container-fluid">
-            <!-- 
-            Navbar del Layout, con el logo de CEDICA y los enlaces a las secciones de la página.
-            -->
+            <!-- Navbar del Layout, con el logo de CEDICA y los enlaces a las secciones de la página. -->
             <a class="navbar-brand" href="{{ url_for('home') }}"><img
                     src="{{ url_for('static', filename='logos/Imagotipo CEDICA.png')}}" width="175"
                     alt="Logo CEDICA" /></a>
@@ -110,6 +113,17 @@
     </main>
     {% block footer %}
     {% endblock %}
+    <script>
+        // Evento que se ejecuta cuando se termina de cargar el DOM y oculta el aside si está vacío.
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const mainElement = document.querySelector('main');
+            const asideElement = document.querySelector('aside');
+            if (!asideElement || !asideElement.innerHTML.trim()) {
+                mainElement.classList.add('no-aside');
+            }
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
