--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -31,6 +31,12 @@ main {
     padding: 20px 25px;
 }
 
+/* No aside */
+main.no-aside {
+    max-width: 1200px;
+    grid-template-columns: 1fr;
+}
+
 header,
 footer {
     background-color: #333;
@@ -73,5 +79,6 @@ footer p {
 @media (max-width: 992px) {
     main {
         grid-template-columns: 1fr;
+        gap: 25px;
     }
 }
