--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -9,8 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        aside:empty {
+        aside:empty,
+        section:empty {
             display: none;
+            /* Oculta los elementos aside y section si están vacíos. */
         }
     </style>
 </head>
@@ -28,6 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- Enlaces a las secciones de la página -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'jya' %}active{% endif %}" aria-current="page"
@@ -90,26 +93,36 @@
         </div>
     </nav>
     <main id="container">
+        <!-- Contenido principal de la página -->
         <aside>{% block aside %}{% endblock %}</aside>
-        <section>
-            <!--para visualizar los mensajes-->
-            {% with messages = get_flashed_messages(with_categories=True) %}
-            {% if messages %}
-            <div class="container">
-                {% for category, message in messages %}
-                <div class="alert alert-{{ category }} flash-message alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+        <div class="d-flex flex-column gap-3">
+            <!-- Sección para mostrar mensajes de error, éxito, etc. -->
+            <section>
+                <!--para visualizar los mensajes-->
+                {% with messages = get_flashed_messages(with_categories=True) %}
+                {% if messages %}
+                <div class="container">
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} flash-message alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
-            </div>
-            {% endif %}
-            {% endwith %}
-            {% block content %}
-            {% endblock %}
-        </section>
+                {% endif %}
+                {% endwith %}
+                {% block content %}
+                {% endblock %}
+            </section>
+
+            <!-- Sección para mostrar el contenido de la página -->
+            <section>
+                {% block content %}
+                {% endblock %}
+            </section>
+        </div>
     </main>
     {% block footer %}
     {% endblock %}
