--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -12,13 +12,14 @@
         aside:empty,
         section:empty {
             display: none;
+            position: absolute;
             /* Oculta los elementos aside y section si están vacíos. */
         }
     </style>
 </head>
 
 <body style="padding-top: 75px;">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm position-fixed w-100 top-0">
+    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
         <div class="container-fluid">
             <!-- Navbar del Layout, con el logo de CEDICA y los enlaces a las secciones de la página. -->
             <a class="navbar-brand" href="{{ url_for('home') }}"><img
@@ -94,13 +95,16 @@
     </nav>
     <main id="container">
         <!-- Contenido principal de la página -->
-        <aside>{% block aside %}{% endblock %}</aside>
+        <!-- Barra de navegación lateral -->
+        <aside class="nav nav-pills flex-column rounded shadow-sm rounded shadow-sm bg-light p-3">
+            {% block aside %}{% endblock %}
+        </aside>
         <div class="d-flex flex-column gap-3">
+            <!-- Código para visualizar los mensajes -->
+            {% with messages = get_flashed_messages(with_categories=True) %}
+            {% if messages %}
             <!-- Sección para mostrar mensajes de error, éxito, etc. -->
             <section>
-                <!--para visualizar los mensajes-->
-                {% with messages = get_flashed_messages(with_categories=True) %}
-                {% if messages %}
                 <div class="container w-75">
                     {% for category, message in messages %}
                     <div class="alert alert-{{ category }} flash-message alert-dismissible fade show" role="alert">
@@ -112,9 +116,9 @@
                     </div>
                     {% endfor %}
                 </div>
-                {% endif %}
-                {% endwith %}
             </section>
+            {% endif %}
+            {% endwith %}
 
             <!-- Sección para mostrar el contenido de la página -->
             <section>
@@ -132,6 +136,7 @@
             const mainElement = document.querySelector('main');
             const asideElement = document.querySelector('aside');
             if (!asideElement || !asideElement.innerHTML.trim()) {
+                asideElement.remove();
                 mainElement.classList.add('no-aside');
             }
         });
