Agrego template create (sin chequeos)

--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -39,7 +39,7 @@
       </p>
     </div>
   </div>
-  <a href="{{ url_for('team.index') }}">Volver al listado de miembros del equipo</a>
+  <a href="{{ url_for('team.index') }}" class="btn btn-primary">Volver al listado de miembros del equipo</a>
 {% endblock %}
 
 {% block footer %}
