--- a/admin/src/web/templates/team/index.html
+++ b/admin/src/web/templates/team/index.html
@@ -9,7 +9,7 @@
 {% block content %}
   <h1>Equipo</h1>
   <p>Pagina de presentación del equipo</p>
-  <a href="{{ url_for('team.create') }}">Crear miembro nuevo</a>
+  <a href="{{ url_for('team.create') }}" class="btn btn-primary">Crear miembro nuevo</a>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -35,9 +35,11 @@
         <td>{{ member.profession.name }}</td>
         <td>{{ member.job.name }}</td>
         <td>
-          <a href="{{ url_for('team.show', id=member.id) }}">Ver</a>
-          <a href="{{ url_for('team.update', id=member.id) }}">Editar</a>
-          <a href="{{ url_for('team.destroy', id=member.id) }}">Eliminar</a>
+            <a href="{{ url_for('team.show', id=member.id) }}" class="btn btn-info">Ver</a>
+            <a href="{{ url_for('team.update', id=member.id) }}" class="btn btn-warning">Editar</a>
+            <form action="{{ url_for('team.destroy', id=member.id) }}" method="POST" style="display:inline;">
+            <button type="submit" class="btn btn-danger">Eliminar</button>
+            </form>
         </td>
       </tr>
       {% endfor %}
