Agrego chequeos html

--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}CEDICA - Detalle de miembro del equipo{% endblock %}
+{% block title %}CEDICA - Ver miembro{% endblock %}
 
 {% block head %}
 {{ super() }}
