--- a/admin/src/web/templates/team/create.html
+++ b/admin/src/web/templates/team/create.html
@@ -9,6 +9,17 @@
 <h1>Crear miembro del equipo</h1>
 <p>Formulario para crear un nuevo miembro del equipo</p>
 <form method="post">
+    <div class="form-group"></div>
+        <label for="province_id">Provincia:</label>
+        <select class="form-control" id="province_id" name="province_id" required>
+            {% for province in provinces %}
+                <option value="{{ province.id }}">{{ province.name }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit" id="search-localities" class="btn btn-primary" name="search_localities" value="Buscar localidades">Buscar localidades</button>
+    </div>
+</form>
+<form method="post">
     <div class="form-group">
         <label for="name">Nombre:</label>
         <input type="text" class="form-control" id="name" name="name" required pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" title="El nombre no debe contener números" minlength="1" maxlength="64">
@@ -37,12 +48,14 @@
         <label for="number">Número:</label>
         <input type="text" class="form-control" id="number" name="number" required pattern="\d+" title="El número no debe contener letras" minlength="1" maxlength="8">
     </div>
-    <div class="form-group">
+    <div class="form-group" id="locality-container">
         <label for="locality_id">Localidad:</label>
         <select class="form-control" id="locality_id" name="locality_id" required>
-            {% for locality in localities %}
-                <option value="{{ locality.id }}">{{ locality.name }}</option>
-            {% endfor %}
+            {% if localities %}
+                {% for locality in localities %}
+                    <option value="{{ locality.id }}">{{ locality.name }}</option>
+                {% endfor %}
+            {% endif %}
         </select>
     </div>
     <div class="form-group">
