--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -35,11 +35,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'jya' %}active{% endif %}" aria-current="page"
-                            href="{{ url_for('jya.index') }}">J&A</a>
+                            href="{{ url_for('jya') }}">J&A</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'ecuestre' %}active{% endif %}"
-                            href="{{ url_for('ecuestre.index') }}">Ecuestre</a>
+                            href="{{ url_for('ecuestre') }}">Ecuestre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'team' %}active{% endif %}"
