--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -16,6 +16,12 @@
             /* Oculta los elementos aside y section si están vacíos. */
         }
     </style>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
+
 </head>
 
 <body style="padding-top: 75px;">
@@ -97,7 +103,8 @@
         <!-- Contenido principal de la página -->
         <!-- Barra de navegación lateral -->
         <aside class="nav nav-pills flex-column rounded shadow-sm rounded shadow-sm bg-light p-3">
-            {% block aside %}{% endblock %}
+            {% block aside %}
+            {% endblock %}
         </aside>
         <div class="d-flex flex-column gap-3">
             <!-- Código para visualizar los mensajes -->
