funcionalidades completas con cambios en el estilo

--- a/admin/src/web/templates/auth/login.html
+++ b/admin/src/web/templates/auth/login.html
@@ -17,7 +17,7 @@
     }
 
     .login-card {
-        background: #b8f1f8;
+        background: #0099CC;
         /* Color celeste */
         padding: 2rem;
         border-radius: 10px;
@@ -28,7 +28,7 @@
     .login-card h2 {
         margin-bottom: 1.5rem;
         text-align: center;
-        color: #eada8c;
+        color: #f6f4eb;
         /* un amarillito */
     }
 
@@ -37,13 +37,13 @@
     }
 
     .btn-login {
-        background-color: #eada8c !important;
+        background-color: #aad6f9 !important;
         /* amarillito */
-        color: white;
+        color: #ADD8E6;
     }
 
     .btn-login:hover {
-        background-color: #597ce8 !important;
+        background-color: #e7def3 !important;
         /* Un azul más oscuro */
     }
 </style>
