--- a/admin/src/web/templates/registro_pagos/index.html
+++ b/admin/src/web/templates/registro_pagos/index.html
@@ -29,7 +29,7 @@
 h2 {
     text-align: center;
     margin-top: 20px;
-    color: #007bff; /* Color para el título */
+    color: #0099CC; /* Color para el título */
 }
 
 table {
@@ -49,7 +49,7 @@ th, td {
 }
 
 th {
-    background-color: #007bff; /* Color de fondo para encabezados */
+    background-color: #0099CC; /* Color de fondo para encabezados */
     color: white; /* Color de texto para encabezados */
     font-weight: bold; /* Negrita para los encabezados */
 }
@@ -80,75 +80,77 @@ tr:last-child td {
     }
 
     .action-icons a {
-        color: #007bff;
+        color: #0099CC;
         text-decoration: none;
         font-size: 1.2em;
     }
 
     .action-icons a:hover {
-        color: #0056b3;
+        color: #0099CC;
     }
 
     .nuevo-pago-btn {
     display: inline-block;
     padding: 10px 20px;
     font-size: 1.2em;
-    background-color: #4a90e2;
+    background-color: #0099CC;
     color: white;
     text-align: center; /* Centrar el texto dentro del botón */
     border-radius: 8px;
     text-decoration: none;
     transition: background-color 0.3s;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-    float: right; /* Alinea el botón a la derecha */
-    margin-top: 10px; /* Ajusta el espacio superior */
+    
+    float: left; /* Alinea el botón a la */
+    margin-left: 210px;
+    margin-bottom: 0px;
 }
 
 .nuevo-pago-btn:hover {
-    background-color: #357ABD;
+    background-color: #0099CC;
 }
 
 .search-container {
-        width: 80%;
-        margin: 0 auto 20px;
-        display: flex;
-        justify-content: flex-end;
-    }
+    width: 80%;
+    margin: 20px auto; /* Margen superior para separación del contenido superior */
+    display: flex; /* Usar flexbox para alinear elementos en fila */
+    justify-content: flex-end; /* Alinear elementos al inicio */
+    align-items: center; /* Alinear verticalmente los elementos al centro */
+}
 
-    .search-container input[type="text"] {
-        padding: 10px;
-        font-size: 1em;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        width: 300px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
+.search-container input[type="date"],
+.search-container select,
+.search-container button {
+    padding: 10px; /* Espaciado interno para todos los elementos del formulario */
+    font-size: 1em; /* Tamaño de fuente */
+    border: 1px solid #ccc; /* Borde gris claro */
+    border-radius: 5px; /* Bordes redondeados */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
 
-    .search-container button {
-        padding: 10px 20px;
-        font-size: 1em;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-left: 10px;
-    }
+/* Estilos específicos para el botón */
+.search-container button {
+    background-color: #0099CC; /* Color de fondo del botón */
+    color: white; /* Color de texto del botón */
+    border: none; /* Sin borde */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
 
-    .search-container button:hover {
-        background-color: #0056b3;
-    }
+.search-container button:hover {
+    background-color: #0099CC; /* Color de fondo al pasar el mouse */
+}
+
 
     .detalles-pago {
         display: none;
         background-color: #f9f9f9;
         padding: 10px;
         margin-top: 10px;
-        border-left: 4px solid #007bff;
+        border-left: 4px solid #0099CC;
     }
 
     .mostrar-mas-btn {
-        background-color: #007bff;
+        background-color: #0099CC;
         color: white;
         padding: 5px 10px;
         border: none;
@@ -157,15 +159,25 @@ tr:last-child td {
     }
 
     .mostrar-mas-btn:hover {
-        background-color: #007bff;
+        background-color: #0099CC;
     }
 
+
+    h2 {
+    font-size: 2rem; /* Tamaño de fuente más grande */
+    color: #333; /* Color del texto */
+    text-align: center; /* Centrar el texto */
+    margin: 20px 0; /* Margen superior e inferior */
+    font-family: 'Arial', sans-serif; /* Cambiar la fuente */
+    border-bottom: 2px solid #0099CC; /* Línea debajo del título */
+    padding-bottom: 10px; /* Espaciado inferior */
+}
 
 </style>
 
     <h2>Listado de Pagos</h2>
-    <a href="{{ url_for('registro_pagos.create') }}" class="nuevo-pago-btn">Crear nuevo pago</a>
 
+    
 
     {% if not pagos %}
     <p style="text-align: center; color: #dc3545;">No hay pagos disponibles en el listado.</p>
@@ -173,22 +185,25 @@ tr:last-child td {
 
  <!-- Buscador -->
  <div class="search-container">
-    <form action="{{ url_for('registro_pagos.index') }}" method="GET">
+    <form action="{{ url_for('registro_pagos.index') }}" method="GET"  class="form-inline">
         
         <!-- Rango de fechas -->
-        <input type="date" name="fecha_inicio" placeholder="Fecha inicio">
-        <input type="date" name="fecha_fin" placeholder="Fecha fin">
+        <input type="date" name="fecha_inicio"  placeholder="Fecha inicio">
+        <input type="date" name="fecha_fin"   placeholder="Fecha fin">
         
         <!-- Tipo de pago -->
-        <select name="tipo_pago">
+        <select name="tipo_pago" >
             <option value="">Todos los tipos</option>
             <option value="Honorarios">Honorarios</option>
             <option value="Proveedor">Proveedor</option>
             <option value="Varios">Varios</option>
         </select>
         
-        <button type="submit">Buscar</button>
+        <button type="submit"  class="btn btn-primary">Buscar</button>
     </form>
+
+    <a href="{{ url_for('registro_pagos.create') }}" class="nuevo-pago-btn">Crear nuevo pago</a>
+
 </div>
 
     <table>
@@ -197,14 +212,14 @@ tr:last-child td {
                 <th>Beneficiario</th>
                 <th>Monto</th>
                 <th>
-                    <a href="#" onclick="ordenarPorFecha()">Fecha 
-                        <i id="orden-icon" class="fas fa-sort"></i> <!-- Icono que cambia al hacer clic -->
+                    <a href="#" onclick="ordenarPorFecha()"  style="color: #f8f9fa;">Fecha 
+                        <i id="orden-icon" class="fas fa-sort" style="color: #f8f9fa;"></i> 
                     </a>
                 </th>
 
                 <th>Tipo de pago</th>
                 <th>Descripcion</th>
-                <th>Acciones</th> <!-- Nueva columna para acciones -->
+                <th>Acciones</th> 
             </tr>
         </thead>
         <tbody>
@@ -212,7 +227,7 @@ tr:last-child td {
                 <tr>
                     <td>{{ pago.beneficiario.email }}</td>
                     <td>{{ pago.monto }}</td>
-                    <td>{{ pago.fecha_pago }}</td>
+                    <td>{{ pago.fecha_pago.strftime('%Y-%m-%d') }}</td>
                     <td>{{ pago.tipo_pago.tipo }}</td>
                     <td>{{ pago.descripcion }}</td>
                     <td class="action-icons">
@@ -222,7 +237,7 @@ tr:last-child td {
                         </a>
                         <!-- Formulario de eliminación -->
                         <form action="{{ url_for('registro_pagos.destroy', id=pago.id) }}" method="POST" style="display: inline;" onsubmit="return confirm('¿Estás seguro de que quieres eliminar este pago?');">
-                            <button type="submit" title="Eliminar" style="border: none; background: none; color: #007bff; cursor: pointer;">
+                            <button type="submit" title="Eliminar" style="border: none; background: none; color: #0099CC; cursor: pointer;">
                                 <i class="fas fa-trash-alt"></i>
                             </button>
                         </form>
@@ -235,12 +250,14 @@ tr:last-child td {
             <tr id="detalles-{{ pago.id }}" class="detalles-pago">
                 <td colspan="6">
                     <strong>Fecha de modificación:</strong> {{ pago.updated_at }}<br>
+                    {% if pago.beneficiario %}
                     <strong>Datos del beneficiario:</strong> Alias - {{ pago.beneficiario.alias }}<br>
-                    <!-- Puedes agregar más detalles aquí -->
+                    {% endif %}
                 </td>
             </tr>
 
             {% endfor %}
+
         </tbody>
     </table>
 {% endif %}
