--- a/admin/src/web/templates/team/update.html
+++ b/admin/src/web/templates/team/update.html
@@ -97,5 +97,6 @@
       </select>
     </div>
     <button type="submit" class="btn btn-primary">Actualizar</button>
+    <a href="{{ url_for('team.index') }}" class="btn btn-secondary">Cancelar</a>
   </form>
 {% endblock %}
