Cambios mínimos en el layout, ahora no se subrayan los links

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -15,13 +15,15 @@
             position: absolute;
             /* Oculta los elementos aside y section si están vacíos. */
         }
+
+        a,
+        a:visited,
+        a:hover {
+            text-decoration: none !important;
+        }
     </style>
 
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
-
 </head>
 
 <body style="padding-top: 75px;">
@@ -155,11 +157,9 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
 
-    <!--lo agregue por los mensajes-->
+    <!-- Lo agregué por los mensajes-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
 </body>
 
 </html>
