--- a/admin/src/web/templates/ecuestre/show.html
+++ b/admin/src/web/templates/ecuestre/show.html
@@ -46,10 +46,23 @@
         <h1>Vista detallada de {{ horse.name }} 🐎</h1>
         <p>Información registrada acerca del caballo</p>
     </div>
-    <a id="btn-back" class="btn border border-2" href="{{ url_for('ecuestre.index') }}">
-        <i style="transform: scale(0.6);" class="fa fa-chevron-left me-1"></i>
-        Volver al listado
-    </a>
+    <div class="d-flex flex-row justify-content-center align-items-center gap-2">
+        <form action="{{ url_for('ecuestre.destroy', id=horse.id) }}" method="POST" style="display: inline;"
+            onsubmit="return confirm('¿Quieres eliminar a {{horse.name}} y todos sus datos?');">
+            <button type="submit" title="Eliminar" class="btn btn-danger">
+                <i style="transform: scale(0.8);" class="fas fa-trash-alt me-1"></i>
+                Eliminar
+            </button>
+        </form>
+        <a class="btn btn-warning" href="{{ url_for('ecuestre.index') }}">
+            <i class="fas fa-edit me-1"></i>
+            Editar
+        </a>
+        <a id="btn-back" class="btn border border-2" href="{{ url_for('ecuestre.index') }}">
+            <i style="transform: scale(0.6);" class="fa fa-chevron-left me-1"></i>
+            Volver al listado
+        </a>
+    </div>
 </header>
 <div class="d-flex flex-row justify-content-evenly align-items-start flex-wrap w-100 gap-3 mt-3">
     <div class="card" style="flex-grow: 0.3;">
